--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "eslint": "^7.9.0",
     "eslint-config-google": "^0.14.0"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "chalk": "^4.1.0",
     "ejs": "^3.1.5",
